kubernetes/manifests/apps/n8n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
    app.kubernetes.io/version: 1.110.1
    helm.sh/chart: n8n-1.15.5
  name: n8n
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 7a84e83f33dc06cd89afb8990d88c6f1fd5b86e0456190f81988353cc1cff729
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: n8n
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: n8n
        app.kubernetes.io/part-of: n8n
        app.kubernetes.io/version: 1.110.1
        helm.sh/chart: n8n-1.15.5
    spec:
      containers:
        - env:
            - name: N8N_HIRING_BANNER_ENABLED
              value: 'false'
            - name: NODE_ENV
              value: production
            - name: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
              value: 'true'
            - name: N8N_PORT
              value: '5678'
            - name: N8N_DEFAULT_LOCALE
              value: en
            - name: GENERIC_TIMEZONE
              value: America/Sao_Paulo
            - name: N8N_GRACEFUL_SHUTDOWN_TIMEOUT
              value: '30'
            - name: N8N_EDITOR_BASE_URL
              value: https://n8n.josevictor.me
            - name: DB_POSTGRESDB_USER
              value: postgres
            - name: DB_POSTGRESDB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgres-password
                  name: n8n-env
                  optional: true
          image: n8nio/n8n:1.112.6@sha256:eb160de0b0ff449434ae853c6ab5b64c86936af136309297c977f21fa10be57f
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          name: n8n-main
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: http
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: node-modules
              readOnly: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      serviceAccountName: n8n
      volumes:
        - name: node-modules
          persistentVolumeClaim:
            claimName: n8n-main-persistence
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
    app.kubernetes.io/version: 1.110.1
    helm.sh/chart: n8n-1.15.5
  name: n8n
  namespace: apps
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
    app.kubernetes.io/version: 1.110.1
    helm.sh/chart: n8n-1.15.5
  name: n8n
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: n8n.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 5678
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - n8n.josevictor.me
      secretName: wildcard-tls
